--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".login.LoginActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,17 +20,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Menu1"
+            android:name=".login.RegisterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
         </activity>
+
+        <activity
+            android:name=".Menu1"
+            android:exported="true" />
         <activity
             android:name=".Menu2"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".Menu3"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
