--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -93,6 +93,22 @@
             android:name=".notice.RingtonePlayingService"
             android:enabled="true"
             android:exported="false"/>
+
+        <receiver
+            android:name=".driver.Driver_Alarm"
+            android:directBootAware="true"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
+                <action android:name="android.app.action.SCHEDULE_EXACT_ALARM_PERMISSION_STATE_CHANGED" />
+            </intent-filter>
+        </receiver>
+        <service
+            android:name=".driver.Driver_Service"
+            android:enabled="true"
+            android:exported="false"/>
     </application>
 
 </manifest>
