--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -132,6 +132,40 @@
             android:name=".notice.Service_Cancle"
             android:enabled="true"
             android:exported="false"/>
+
+        <receiver
+            android:name=".driver.Driver_EndAlarm"
+            android:directBootAware="true"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
+                <action android:name="android.app.action.SCHEDULE_EXACT_ALARM_PERMISSION_STATE_CHANGED" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".driver.Driver_EndService"
+            android:enabled="true"
+            android:exported="false"/>
+
+        <receiver
+            android:name=".driver.Driver_EbusAlarm"
+            android:directBootAware="true"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
+                <action android:name="android.app.action.SCHEDULE_EXACT_ALARM_PERMISSION_STATE_CHANGED" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".driver.Driver_EbusService"
+            android:enabled="true"
+            android:exported="false"/>
     </application>
 
 </manifest>
